# Raptor-Basics

./: .gitignore  README.md  dummy_server.py  pyproject.toml  raptor_pipeline.ipynb  themen_text.txt
